[project]
name = "kyn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.2",
    "networkx>=3.4.2",
    "torch>=2.5.1",
    "torch-geometric>=2.6.1",
    "tqdm>=4.67.0",
    "pytorch-metric-learning>=2.7.0",
    "torchmetrics>=1.5.2",
    "wandb>=0.18.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
